@@ -691,4 +691,6 @@
 
 	* 1.7.5 release
 
+2013-01-06  Jaehyun Cho (jae_hyun_cho@naver.com)
 
+        * Fix omitting signal emission when customized text parts change the text.
